# AutonomousLaneDetection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lane_detect  readme.md
app/: Files.cpp  LanesMarker.cpp  RegionMaker.cpp  Thresholder.cpp  main.cpp
include/: Thresholder.hpp
src/: #lane_detect.cpp#  lane_detect.cpp  lane_detect.hpp
